# bw

./: .dockerignore  .gitignore  CLAUDE.md  DESCRIPTION  Dockerfile  FORMULA_COMPARISON.md  Makefile  generate_reference.R
.runtime/: session_id
bw-python/: pyproject.toml
bw-python/bw/: __init__.py  adult_model.py  child_model.py  constants.py  energy.py  plot.py  stats.py
bw-python/tests/: test_adult.py  test_child.py  test_energy.py  test_parity.py  test_parity_smoke.py  test_stats.py
bw-python/tests/reference/: adult_female_baseline.json  adult_male_baseline.json  adult_male_ei2500.json  adult_male_ei2500_fat15.json  adult_male_fat15.json  child_female_age10.json  child_male_age6.json  child_male_richardson.json  energy_brownian.json  energy_exponential.json  energy_linear.json  energy_logarithmic.json  energy_stepwise_l.json
bw-python/tests/reference_values/: adult_female_baseline.json  adult_male_baseline.json  adult_male_deficit.json  adult_male_ei2400.json  adult_multi.json  child_female_730d.json  child_male_365d.json  child_male_5yr.json  energy_exponential.json  energy_linear.json  energy_logarithmic.json  energy_stepwise_l.json  energy_stepwise_r.json
docs/: glycogen-flux-units-fix.md
scripts/: generate_reference_values.R
src/: adult_weight.cpp
tests/testthat/: setup.R  test_adult_bmi.R  test_adult_weight.R  test_children_weight.R  test_energy_build.R  test_model_mean.R  test_model_plot.R
